# Py2PT

./: .gitignore  Py2PT.yml  pyproject.toml  todo.txt
src/py2pt/: __init__.py  constants.py  energy.py  entropy.py  fluidicity.py  fluidicity_check.py  inertia.py  inverse_fluidicity.py  main.py  output.py  spectrum.py  velocity.py
src/py2pt/redundant/: inertia.py
src/py2pt/test/: fluidicity_check.py  inverse_fluidicity.py
validation/F3C/: confout.gro  ener.edr  energy.xvg  gmx-energy.sh  mdout.mdp  no_mw.ndx  npt.cpt  npt.edr  npt.gro  npt.mdp  npt_prev.cpt  nvt.mdp  run-npt.sh  run-nvt.sh  state.cpt  state_prev.cpt  topol.top
validation/F3C/ener/: kinetic.xvg  potential.xvg  pressure.xvg  temperature.xvg  total.xvg
validation/F3C/ener-npt/: density.xvg  kinetic.xvg  potential.xvg  pressure.xvg  temperature.xvg  total.xvg
validation/F3C/entropy/: Py2PT.yml  density_of_states.txt  entropy.txt  run-py2pt.sh
validation/SPC-2000/298.15_9.968e-01/: calculate-box-size.py  confout.gro  eq.cpt  eq.edr  eq.gro  eq.mdp  gmx-solvate.sh  mdout.mdp  min.edr  min.gro  prod.mdp  run-prod.sh  solvate.gro  state.cpt  state_prev.cpt  topol.top
validation/SPC/273.16_9.998e-01/: #confout.gro.1#  #ener.edr.1#  #md.log.1#  #prod.tpr.1#  confout.gro  ener.edr  eq.cpt  eq.edr  eq.gro  eq.mdp  mdout.mdp  min.edr  min.gro  min.mdp  prod.mdp  run-min.sh  solvate.gro  state.cpt  state_prev.cpt  topol.top
validation/SPC/298.15_9.968e-01/: confout.gro  eq.cpt  eq.edr  eq.gro  eq_prev.cpt  gmx-energy.sh  mdout.mdp  min.edr  min.gro  prod.mdp  run-prod.sh  solvate.gro  state.cpt  (+1 more)
(+103 files in other folders)
