[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py2pt"
version = "1.362"
description = "2PT method for density of states spectra and entropy calculation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "MDAnalysis",
    "numpy",
    "matplotlib",
    "tqdm",
    "numba",
    "scipy",
    "pyyaml",
]

[project.scripts]
py2pt = "py2pt.main:main"

[tool.setuptools]
package-dir = {"" = "src"} 
